Bug #7129 Test failure: 'type_ranges' when using '--ps-protocol'
Submitted: 9 Dec 2004 11:23 Modified: 10 Dec 2004 17:35
Reporter: Joerg Bruehe Email Updates:
Status: Closed Impact on me:
None 
Category:MySQL Server Severity:S1 (Critical)
Version:4.1.8-pre OS:IBM AIX (AIX (64), Linux/Alpha(64), +more)
Assigned to: Ramil Kalimullin CPU Architecture:Any

[9 Dec 2004 11:23] Joerg Bruehe
Description:
Description:
In addition to the standard way, we now also run the test suite with
--ps-protocol.

On several 64 bit platforms 
(AIX 5.2/64 bit, Linux/Alpha, Linux/x86_64, HP-UX/ia64, HP-UX/HPPA64,
Linux/ia64, Linux/x86_64/glibc2.3, Solaris/Sparc64),
this resulted in this test output:

-------------------------------------------------------
*** r/type_ranges.result        Thu Dec  9 00:07:13 2004
--- r/type_ranges.reject        Thu Dec  9 02:25:51 2004
***************
*** 125,131 ****
  12    0.33    3       3       3       3       3       3.0     3.0000  3       00003   3       3       3       0       1997-03-03      10:10:10        1997-
03-03 10:10:10                             3
  13    -1      -1      -1      -1      -1      -1      -1.0    -1.0000 0       00000   0       0       18446744073709551615    0       1997-08-07      08:07
:06        1997-04-03 09:08:07     -1      -1      -1      -1
  14    -429496729      -128    -32768  -8388608        -2147483648     -4294967295     -4294967296.0   -4294967295.0000        0       00000   0       0
   18446744069414584321    0       0000-00-00      00:00:00        0000-00-00 00:00:00     -4294967295     -4294967295     -4294967295     -4294967295
! 15    4294967295      127     32767   8388607 2147483647      4294967295      4294967296.0    4294967295.0000 255     65535   16777215        4294967295
   4294967295      0       0000-00-00      00:00:00        0000-00-00 00:00:00     4294967295      4294967295      4294967295      4294967295
  16    hello   1       1       0       0       0       0.0     NULL    0       00000   0       0       0       0       NULL    NULL    NULL    NULL    NULL

  ALTER TABLE t1
  add new_field char(10) default "new" not null,
--- 125,131 ----
  12    0.33    3       3       3       3       3       3.0     3.0000  3       00003   3       3       3       0       1997-03-03      10:10:10        1997-
03-03 10:10:10                             3
  13    -1      -1      -1      -1      -1      -1      -1.0    -1.0000 0       00000   0       0       18446744073709551615    0       1997-08-07      08:07
:06        1997-04-03 09:08:07     -1      -1      -1      -1
  14    -429496729      -128    -32768  -8388608        -2147483648     -4294967295     -4294967296.0   -4294967295.0000        0       00000   0       0
   18446744069414584321    0       0000-00-00      00:00:00        0000-00-00 00:00:00     -4294967295     -4294967295     -4294967295     -4294967295
! 15    4294967295      127     32767   8388607 2147483647      4294967295      4294967296.0    4294967295.0000 255     65535   16777215        1844674407370
9551615    4294967295      0       0000-00-00      00:00:00        0000-00-00 00:00:00     4294967295      4294967295      4294967295      4294967295
  16    hello   1       1       0       0       0       0.0     NULL    0       00000   0       0       0       0       NULL    NULL    NULL    NULL    NULL

  ALTER TABLE t1
  add new_field char(10) default "new" not null,
-------------------------------------------------------

There are also failures in tests "type_ranges" (bug#7126) and "type_uint" on these
platforms, reported separately.

How to repeat:
Run the test with --ps-protocol.
[9 Dec 2004 11:34] Joerg Bruehe
Typing error above: The other failures on these platforms are 'func_str' (#7126) and 'type_uint'.
[10 Dec 2004 17:35] Ramil Kalimullin
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html

Additional info:

fixed in 4.1.8