A fix (bug #7129: Test failure: 'type_ranges' when using '--ps-protocol'        bug #7126: Test failure: 'func_str' when using '--ps-protocol'        bug #7130: Test failure: 'type_uint' when using '--ps-protocol').